--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "jest": "^27.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "@types/mocha": "^9.0.0",
+    "@types/react": "^17.0.19",
+    "typescript": "^4.4.2",
+    "uuid": "^8.3.2"
   }
 }
