--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.1",
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.19",
